<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <!--第几周-->
    <TextView
        android:id="@+id/month"
        style="@style/style_text_day_num"
        android:layout_width="30dp"
        android:text="7月" />

    <View style="@style/line_gray1" />

    <LinearLayout
        android:id="@+id/monday_content"
        style="@style/style_view_out">

        <TextView
            android:id="@+id/monday"
            style="@style/style_text_day_num"
            android:text="12" />

        <TextView
            style="@style/style_text_day"
            android:text="@string/monday" />
    </LinearLayout>

    <View style="@style/line_gray1" />

    <LinearLayout
        android:id="@+id/tuesday_content"
        style="@style/style_view_out">

        <TextView
            android:id="@+id/tuesday"
            style="@style/style_text_day_num"
            android:text="12" />

        <TextView
            style="@style/style_text_day"
            android:text="@string/tuesday" />
    </LinearLayout>

    <View style="@style/line_gray1" />

    <LinearLayout
        android:id="@+id/wednesday_content"
        style="@style/style_view_out">

        <TextView
            android:id="@+id/wednesday"
            style="@style/style_text_day_num"
            android:text="12" />

        <TextView
            style="@style/style_text_day"
            android:text="@string/wednesday" />
    </LinearLayout>

    <View style="@style/line_gray1" />

    <LinearLayout
        android:id="@+id/thursday_content"
        style="@style/style_view_out">

        <TextView
            android:id="@+id/thursday"
            style="@style/style_text_day_num"
            android:text="12" />

        <TextView
            style="@style/style_text_day"
            android:text="@string/thursday" />
    </LinearLayout>

    <View style="@style/line_gray1" />

    <LinearLayout
        android:id="@+id/friday_content"
        style="@style/style_view_out">

        <TextView
            android:id="@+id/friday"
            style="@style/style_text_day_num"
            android:text="12" />

        <TextView
            style="@style/style_text_day"
            android:text="@string/friday" />
    </LinearLayout>

    <View style="@style/line_gray1" />

    <LinearLayout
        android:id="@+id/saturday_content"
        style="@style/style_view_out">

        <TextView
            android:id="@+id/saturday"
            style="@style/style_text_day_num"
            android:text="12" />

        <TextView
            style="@style/style_text_day"
            android:text="@string/saturday" />
    </LinearLayout>

    <View style="@style/line_gray1" />

    <LinearLayout
        android:id="@+id/sunday_content"
        style="@style/style_view_out">

        <TextView
            android:id="@+id/sunday"
            style="@style/style_text_day_num"
            android:text="12" />

        <TextView
            style="@style/style_text_day"
            android:text="@string/sunday" />
    </LinearLayout>

    <View style="@style/line_gray1" />


</merge>