<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/tv_height"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/yellow"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="@dimen/tv_height"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/edit_bg"
                android:gravity="center"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tv_minute"
                android:layout_width="0dp"
                android:layout_height="@dimen/tv_height"
                android:layout_weight="1"
                android:background="@drawable/edit_bg"
                android:gravity="center"
                android:text="@string/minute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="@color/yellow"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="35dp"
                android:background="@drawable/edit_bg"
                android:gravity="left"
                android:hint="@string/please_input"
                android:padding="5dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                android:textColor="@color/yellow"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_height"
                android:layout_marginLeft="35dp"
                android:background="@drawable/edit_bg"
                android:gravity="center_vertical"

                android:hint="各标签间用空格分开"
                android:paddingLeft="5dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat"
                android:textColor="@color/yellow"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/repeat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_height"
                android:layout_marginLeft="5dp"
                android:background="@drawable/edit_bg"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/onetime" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@drawable/big_btn_bg"
            android:gravity="center"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
    <View
        android:id="@+id/hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>

